# LoRa-Transfer-Pruning

./: .gitignore  pyproject.toml
experiments/: about-transformer-lens-lib.md  load_Qwen3-30B-A3B_on_single_GPU_with_gptq.ipynb  test_pruning_llama.ipynb  transformer_lens_models_setup_draft_deepseekv2.ipynb  transformer_lens_performance_deepseekv2.ipynb  transformer_lens_performance_gemma4_E4B_it.ipynb  transformer_lens_performance_llama3.1.ipynb  transformer_lens_performance_qwen3.ipynb  transformer_lens_setup_gemma4_E4B_it.ipynb  transformer_lens_setup_llama3.1.ipynb
experiments/utils/: PerformanceEvaluator.py  mmlu_batch_generator.py
lora_transfer_pruning/core/: pruning_instrumentor.py
tests/: test_pruning_instrumentor.py
